# distilled_TI

./: .gitignore  .gitmodules  Distilled_TI_Architecture_v1.md  README.md  item_bank_rewrite_v1.md  start-dev.ps1  start-senren.bat
ai-chat-support-demo/: .env.example  README.md  server.py  start-nextchat-demo.ps1  start-nextchat-demo.sh
backend/: .env.example  .env.minimal.example  README.md  pyproject.toml
backend/app/: __init__.py  admin_main.py  main.py
backend/app/api/: admin_routes.py  routes.py  schemas.py  security.py  senren_routes.py
backend/app/core/: config.py
backend/app/domain/: dimensions.py  galgame_calibration.py  galgame_character_profiles.py  item_bank.py  models.py  senren_choice_tree.py  senren_dimension_mapping.py  senren_skills_loader.py
backend/app/services/: ai_service.py  clustering.py  context_analysis_service.py  email_service.py  embedding_service.py  galgame_asset_service.py  generation.py  reporting.py  reranker_service.py  scoring.py  senren_monitor_service.py  session_service.py  storage.py  user_service.py  validators.py  vector_indexer.py  vector_store.py
backend/scripts/: ai_acceptance.py  check_galgame_assets.py  check_public_api_deployment.py  galgame_text_calibration.py  vector_acceptance.py
backend/tests/: conftest.py  test_admin_api.py  test_clustering.py  test_context_analysis_api.py  test_generation.py  test_health.py  test_item_bank.py  test_scoring.py  test_session_api.py  test_session_service.py  test_vector_services.py
docs/: architecture-assessment-core.md  context-support-api.md  development-guide.md  (+3 more)
(+101 files in other folders)
