[project]
name = "distilled-ti-backend"
version = "0.1.0"
description = "Backend MVP for Distilled TI"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "httpx>=0.28,<1.0",
  "pillow>=11,<12",
  "qdrant-client>=1.17,<2.0",
  "scikit-learn>=1.6,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
